--- a/carousel.html
+++ b/carousel.html
@@ -1,21 +1,17 @@
 <section class="main-section text-visible">
-  <h1 class="text-center mb-5 pt-md-4 pt-2">Applications</h1>
+  <p class="text-center mb-5 pt-md-4 pt-2 fs-1">Applications</p>
   <!-- dev team images and desc -->
   <div class="my-body">
     <div class="my-container">
       <input type="radio" name="slider" id="item-1" checked />
       <input type="radio" name="slider" id="item-2" />
       <input type="radio" name="slider" id="item-3" />
-      <!-- <input type="radio" name="slider" id="item-4" />
-      <input type="radio" name="slider" id="item-5" />
-      <input type="radio" name="slider" id="item-6" /> -->
-
 
       <div class="cards">
         <!-- Digital Dungeons -->
         <label class="card" for="item-1" id="index-1">
           <div class="img-wrapper">
-            <img src="../assets/DigitalDungeons.png" alt="Digital Dungeons" />
+            <img class="card-img" src="../assets/DigitalDungeons.png" alt="Digital Dungeons" />
           </div>
           <div class="desc">
             <div class="desc-title d-flex justify-content-center">
@@ -26,7 +22,8 @@
               </div>
             </div>
             <div class="desc-body p-3">
-              <p>We be the digital dungeons and dragons resource!</p>
+              <p>Digital Dungeons is a tool for dungeon masters to organize campaigns and encounters. Created using
+                Vue.js for the frontend and Node.js for the backend using MongoDB as a database.</p>
             </div>
           </div>
         </label>
@@ -36,7 +33,7 @@
         <!-- Keepr -->
         <label class="card" for="item-2" id="index-2">
           <div class="img-wrapper">
-            <img src="../assets/Keepr.png" alt="Abraham Coombs" />
+            <img class="card-img" src="../assets/Keepr2.png" alt="Abraham Coombs" />
           </div>
           <div class="desc">
             <div class="desc-title d-flex justify-content-center">
@@ -46,7 +43,8 @@
               </div>
             </div>
             <div class="desc-body p-3">
-              <p>Keepr is a photo sharing site where albums (keeps) can be created to store images.</p>
+              <p>Keepr is a photo sharing site where albums (vaults) can be created to store images (keeps). Created
+                using Vue.js for the frontend and .NET for the backend using MySQL as a database.</p>
             </div>
           </div>
         </label>
@@ -56,7 +54,7 @@
         <!-- Groceries -->
         <label class="card" for="item-3" id="index-3">
           <div class="img-wrapper">
-            <img src="../assets/Groceries.png" alt="Groceries" />
+            <img class="card-img" src="../assets/Groceries.png" alt="Groceries" />
           </div>
           <div class="desc">
             <div class="desc-title d-flex justify-content-center">
@@ -67,7 +65,8 @@
               </div>
             </div>
             <div class="desc-body p-3">
-              <span>Digital list of groceries... no more paper lists!</span>
+              <p>I found myself using an old project as a digital grocery list, so I created an application specifically
+                for that! This also uses Vue.js for the frontend, Node.js for the backend and MongoDB as a database.</p>
             </div>
           </div>
         </label>
@@ -77,11 +76,7 @@
   </div>
 </section>
 
-<style>
-  .main-section {
-    height: 90vh;
-  }
-
+<style scoped>
   .my-body {
     display: flex;
     align-items: center;
@@ -110,21 +105,28 @@
     position: relative;
     width: 100%;
     height: 100%;
-    margin-top: 3rem;
+    /* margin-top: 3rem; */
   }
 
   .card {
     position: absolute;
     width: 60%;
-    height: fit-content;
+    height: 40vh;
     left: 0;
     right: 0;
     margin: auto;
     transition: transform 0.75s ease;
     cursor: pointer;
-    border-radius: 10px;
-    background-color: rgba(0, 0, 0, 0.75);
+    border-radius: 12px;
+    background-color: var(--background-transparency);
     box-shadow: 0px 0px 5px 0px rgba(81, 81, 81, 0.47);
+    border: 2px black solid;
+  }
+
+  .card-img {
+    height: 30vh;
+    border-radius: 10px;
+    object-fit: scale-down;
   }
 
   #index-1 {
@@ -132,7 +134,7 @@
     background-position: center;
     background-size: cover;
   }
-  
+
   #index-2 {
     background-image: url("https://images.unsplash.com/photo-1502982720700-bfff97f2ecac?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2340&q=80");
     background-position: center;
@@ -146,26 +148,21 @@
   }
 
   .img-wrapper {
-    background-color: rgb(0, 0, 0, 0.75);
+    background-color: var(--background-transparency);
     height: 100%;
     width: 100%;
     border-radius: 10px 10px 0 0;
     padding: 1rem;
-  }
-
-  img {
-    width: 100%;
-    height: 55vh;
-    border-radius: 10px;
-    object-fit: scale-down;
-    /* object-fit: cover; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .desc {
     display: none;
     padding: 0.5rem;
-    /* backdrop-filter: blur(8px); */
-    background-color: rgb(0, 0, 0, 0.75);
+    width: 100%;
+    background-color: var(--background-transparency);
 
   }
 
@@ -175,7 +172,7 @@
   }
 
   .desc-body {
-    max-height: 25vh;
+    max-height: 30vh;
     overflow-y: auto;
   }
 
@@ -186,26 +183,13 @@
     left: 0;
   }
 
-  @media (min-width: 768px) {
-    .card {
-      width: 80%;
-    }
 
-    .cards {
-      margin-top: 0;
-    }
-  }
 
-  @media (min-width: 1400px) {
-    img {
-      max-height: 60vh;
-    }
-  }
 
   #item-1:checked~.cards #index-3,
   #item-2:checked~.cards #index-1,
   #item-3:checked~.cards #index-2 {
-    transform: translatex(-40%) scale(0.8);
+    transform: translatex(-40%) scale(0.6);
     opacity: 0.4;
     z-index: 0;
   }
@@ -213,7 +197,7 @@
   #item-1:checked~.cards #index-2,
   #item-2:checked~.cards #index-3,
   #item-3:checked~.cards #index-1 {
-    transform: translatex(40%) scale(0.8);
+    transform: translatex(40%) scale(0.6);
     opacity: 0.4;
     z-index: 0;
   }
@@ -221,7 +205,7 @@
   #item-1:checked~.cards #index-1,
   #item-2:checked~.cards #index-2,
   #item-3:checked~.cards #index-3 {
-    transform: translatex(0) scale(1);
+    transform: translatex(0) scale(.8);
     width: 80%;
     opacity: 1;
     z-index: 1;
@@ -234,70 +218,50 @@
     display: block;
   }
 
+  @media (min-width: 768px) {
+    .card {
+      width: 80%;
+      height: fit-content;
+    }
 
-  /* 6 items */
-  /* #item-1:checked~.cards #index-3,
-#item-1:checked~.cards #index-4,
-#item-1:checked~.cards #index-5,
-#item-2:checked~.cards #index-4,
-#item-2:checked~.cards #index-5,
-#item-2:checked~.cards #index-6,
-#item-3:checked~.cards #index-1,
-#item-3:checked~.cards #index-5,
-#item-3:checked~.cards #index-6,
-#item-4:checked~.cards #index-1,
-#item-4:checked~.cards #index-2,
-#item-4:checked~.cards #index-6,
-#item-5:checked~.cards #index-1,
-#item-5:checked~.cards #index-2,
-#item-5:checked~.cards #index-3,
-#item-6:checked~.cards #index-2,
-#item-6:checked~.cards #index-3,
-#item-6:checked~.cards #index-4 {
-  display: none;
-}
+    .card-img {
+      height: 55vh;
+    }
 
-#item-1:checked~.cards #index-6,
-#item-2:checked~.cards #index-1,
-#item-3:checked~.cards #index-2,
-#item-4:checked~.cards #index-3,
-#item-5:checked~.cards #index-4,
-#item-6:checked~.cards #index-5 {
-  transform: translatex(-40%) scale(0.8);
-  opacity: 0.4;
-  z-index: 0;
-}
+    .desc-body {
+      max-height: 25vh;
+    }
 
-#item-1:checked~.cards #index-2,
-#item-2:checked~.cards #index-3,
-#item-3:checked~.cards #index-4,
-#item-4:checked~.cards #index-5,
-#item-5:checked~.cards #index-6,
-#item-6:checked~.cards #index-1 {
-  transform: translatex(40%) scale(0.8);
-  opacity: 0.4;
-  z-index: 0;
-}
+    #item-1:checked~.cards #index-3,
+    #item-2:checked~.cards #index-1,
+    #item-3:checked~.cards #index-2 {
+      transform: translatex(-40%) scale(0.8);
+      opacity: 0.4;
+      z-index: 0;
+    }
 
-#item-1:checked~.cards #index-1,
-#item-2:checked~.cards #index-2,
-#item-3:checked~.cards #index-3,
-#item-4:checked~.cards #index-4,
-#item-5:checked~.cards #index-5,
-#item-6:checked~.cards #index-6 {
-  transform: translatex(0) scale(1);
-  width: 80%;
-  opacity: 1;
-  z-index: 1;
-  cursor: default;
-}
+    #item-1:checked~.cards #index-2,
+    #item-2:checked~.cards #index-3,
+    #item-3:checked~.cards #index-1 {
+      transform: translatex(40%) scale(0.8);
+      opacity: 0.4;
+      z-index: 0;
+    }
 
-#item-1:checked~.cards #index-1>.desc,
-#item-2:checked~.cards #index-2>.desc,
-#item-3:checked~.cards #index-3>.desc,
-#item-4:checked~.cards #index-4>.desc,
-#item-5:checked~.cards #index-5>.desc,
-#item-6:checked~.cards #index-6>.desc {
-  display: block;
-} */
+    #item-1:checked~.cards #index-1,
+    #item-2:checked~.cards #index-2,
+    #item-3:checked~.cards #index-3 {
+      transform: translatex(0) scale(1);
+      width: 80%;
+      opacity: 1;
+      z-index: 1;
+      cursor: default;
+    }
+  }
+
+  @media (min-width: 1400px) {
+    .cards {
+      margin-top: 3rem;
+    }
+  }
 </style>
