--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
 <body class="text-visible">
   <section class="wrapper">
     <header>
-      <h1>This is the header.</h1>
+      <div class="d-flex flex-column flex-grow-1" navbar="navbar.html"></div>
     </header>
     <main>
-      <h2>This is my landing page. Spiffy, right?</h2>
-      <div carousel="carousel.html"></div>
+      <div class="content-wrapper">
+        <div class="carousel-wrapper content fade-transition invisible" id="applications">
+          <div carousel="carousel.html"></div>
+        </div>
+        <div id="about" about="about.html" class="content fade-transition"></div>
+      </div>
     </main>
-    <footer>
-      <h3>This is the footer.</h3>
-    </footer>
+    <!-- <footer>
+      
+    </footer> -->
   </section>
 </body>
 
@@ -32,6 +36,12 @@
 </html>
 
 <style>
+  :root {
+    --background-transparency: rgba(0, 0, 0, 0.85);
+    --fade-duration: 1s;
+    --fade-timing: linear;
+  }
+
   body {
     width: 100vw;
     height: 100vh;
@@ -41,6 +51,7 @@
     background-size: cover;
     display: flex;
     flex-direction: column;
+    /* overflow-x: hidden; */
   }
 
   .wrapper {
@@ -52,14 +63,46 @@
 
   header {
     flex-grow: 0;
+    height: 5vh;
+    display: flex;
+    flex-direction: column;
   }
 
   main {
     flex-grow: 1;
+    overflow-y: auto;
+    height: 95vh;
+  }
+
+  .content-wrapper {
+    position: relative;
+    height: 100%;
+    width: 100%;
+  }
+  
+  .carousel-wrapper {
+    width: 100%;
+    height: 100%;
+  }
+
+  #about {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+  .content {
+    position: absolute;
+    top: 0;
+    left: 0;
   }
 
   footer {
     flex-grow: 0;
+    height: 5vh;
   }
 
   .text-visible {
@@ -68,4 +111,25 @@
     font-weight: 700;
     letter-spacing: 0.035rem;
   }
+
+
+  .fade-transition {
+    transition: all 2s ease;
+  }
+
+  .invisible {
+    opacity: 0;
+  }
+
+  /* .visible {
+    visibility: visible;
+    opacity: 1;
+    transition: opacity var(--fade-duration) ease-in;
+  }
+
+  .hidden {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s var(--fade-duration), opacity 2s ease-in;
+  } */
 </style>
