--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 
@@ -34,102 +35,3 @@
 <script src="app.js"></script>
 
 </html>
-
-<style>
-  :root {
-    --background-transparency: rgba(0, 0, 0, 0.85);
-    --fade-duration: 1s;
-    --fade-timing: linear;
-  }
-
-  body {
-    width: 100vw;
-    height: 100vh;
-    background-color: black;
-    background-image: url("https://i.giphy.com/media/OK5LK5zLFfdm/giphy.webp");
-    background-position: center;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    /* overflow-x: hidden; */
-  }
-
-  .wrapper {
-    background-color: rgba(0, 0, 0, 0.9);
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-  }
-
-  header {
-    flex-grow: 0;
-    height: 5vh;
-    display: flex;
-    flex-direction: column;
-  }
-
-  main {
-    flex-grow: 1;
-    overflow-y: auto;
-    height: 95vh;
-  }
-
-  .content-wrapper {
-    position: relative;
-    height: 100%;
-    width: 100%;
-  }
-  
-  .carousel-wrapper {
-    width: 100%;
-    height: 100%;
-  }
-
-  #about {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-
-  .content {
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-
-  footer {
-    flex-grow: 0;
-    height: 5vh;
-  }
-
-  .text-visible {
-    text-shadow: 2px 0 2px rgba(0, 0, 0, 0.644), 0 2px 2px rgba(0, 0, 0, 0.644), -2px 0 2px rgba(0, 0, 0, 0.644), 0 -2px 2px rgba(0, 0, 0, 0.644), 0 0 10px rgba(255, 4, 4, 0.846);
-    color: rgb(241, 231, 231);
-    font-weight: 700;
-    letter-spacing: 0.035rem;
-  }
-
-
-  .fade-transition {
-    transition: all 2s ease;
-  }
-
-  .invisible {
-    opacity: 0;
-  }
-
-  /* .visible {
-    visibility: visible;
-    opacity: 1;
-    transition: opacity var(--fade-duration) ease-in;
-  }
-
-  .hidden {
-    visibility: hidden;
-    opacity: 0;
-    transition: visibility 0s var(--fade-duration), opacity 2s ease-in;
-  } */
-</style>
