changed default pic for groceries app

--- a/carousel.html
+++ b/carousel.html
@@ -54,7 +54,7 @@
         <!-- Groceries -->
         <label class="card" for="item-3" id="index-3">
           <div class="img-wrapper">
-            <img class="card-img" src="../assets/Groceries.png" alt="Groceries" />
+            <img class="card-img" src="../assets/GroceriesList.png" alt="Groceries" />
           </div>
           <div class="desc">
             <div class="desc-title d-flex justify-content-center">
