--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </div>
         <div id="about" about="about.html" class="content fade-transition"></div>
       </div>
+      <div digitalDungeonsModal="DigitalDungeonsModal.html" class="my-modal"></div>
     </main>
     <!-- <footer>
       
