cleanup of temp modal message

--- a/DigitalDungeonsModal.html
+++ b/DigitalDungeonsModal.html
@@ -1,15 +1,7 @@
 <div class="modal-bg" id="digitalDungeonsModal">
   <div class="modal-content-wrapper" id="digitalDungeonsModalWrapper">
-    <div class="modal-content" id="digitalDungeonsModalContent">
-      <div class="container-fluid p-0">
-        <div class="row">
-          <div class="col-12">
-            <h1>Soon to have info about Digital Dungeons!</h1>
-            <!-- <button onclick="closeModal('digitalDungeonsModal')">Close Me</button> -->
-            <!-- <button id="closeButton">Close Me</button> -->
-          </div>
-        </div>
-      </div>
+    <div class="modal-content p-3" id="digitalDungeonsModalContent">
+      <h1 class="m-auto">Soon to have info about Digital Dungeons!</h1>
     </div>
   </div>
 </div>
