basic modal setup for other apps

--- a/carousel.html
+++ b/carousel.html
@@ -15,7 +15,7 @@
           </div>
           <div class="desc">
             <div class="desc-title d-flex justify-content-center">
-              <h3><button class="text-visible" onclick="openModal('digitalDungeonsModal')">Digital Dungeons</button></h3>
+              <p class="fs-3"><button class="text-visible" onclick="openModal('digitalDungeonsModal')">Digital Dungeons</button></p>
               <div class="icons d-flex gap-2 ps-3">
                 <a href="https://digital-dungeons.onrender.com/" target="_blank" class="mdi mdi-page fs-4"
                   title="Digital Dungeons"></a>
@@ -35,7 +35,8 @@
           </div>
           <div class="desc">
             <div class="desc-title d-flex justify-content-center">
-              <h3>Keepr</h3>
+              <p class="fs-3"><button class="text-visible" onclick="openModal('keeprModal')">Keepr</button></p>
+
               <div class="icons d-flex gap-2 ps-3">
                 <a href="https://github.com/coombsab" target="_blank" class="mdi mdi-page fs-4" title="Keepr"></a>
               </div>
@@ -54,7 +55,7 @@
           </div>
           <div class="desc">
             <div class="desc-title d-flex justify-content-center">
-              <h3>Groceries</h3>
+              <p class="fs-3"><button class="text-visible" onclick="openModal('groceriesModal')">Groceries</button></p>
               <div class="icons d-flex gap-2 ps-3">
                 <a href="https://groceries.onrender.com/" target="_blank" class="mdi mdi-page fs-4"
                   title="Groceries"></a>
