--- a/groceriesModal.html
+++ b/groceriesModal.html
@@ -1,7 +1,7 @@
-<div class="modal-bg" id="digitalDungeonsModal">
-  <div class="modal-content-wrapper" id="digitalDungeonsModalWrapper">
-    <div class="modal-content p-3" id="digitalDungeonsModalContent">
-      <h1 class="m-auto">Soon to have info about Digital Dungeons!</h1>
+<div class="modal-bg" id="groceriesModal">
+  <div class="modal-content-wrapper" id="groceriesModalWrapper">
+    <div class="modal-content p-3" id="groceriesModalContent">
+      <h1 class="m-auto">Soon to have info about Groceries!</h1>
     </div>
   </div>
 </div>
