--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         </div>
         <div id="about" about="about.html" class="content fade-transition"></div>
       </div>
-      <div digitalDungeonsModal="DigitalDungeonsModal.html" class="my-modal"></div>
+      <div digitalDungeonsModal="digitalDungeonsModal.html" class="my-modal"></div>
+      <div keeprModal="keeprModal.html" class="my-modal"></div>
+      <div groceriesModal="groceriesModal.html" class="my-modal"></div>
     </main>
     <!-- <footer>
       
