--- a/keeprModal.html
+++ b/keeprModal.html
@@ -1,10 +1,11 @@
-<div class="modal-bg" id="digitalDungeonsModal">
-  <div class="modal-content-wrapper" id="digitalDungeonsModalWrapper">
-    <div class="modal-content p-3" id="digitalDungeonsModalContent">
-      <h1 class="m-auto">Soon to have info about Digital Dungeons!</h1>
+<div class="modal-bg" id="keeprModal">
+  <div class="modal-content-wrapper" id="keeprModalWrapper">
+    <div class="modal-content p-3" id="keeprModalContent">
+      <h1 class="m-auto">Soon to have info about Keepr!</h1>
     </div>
   </div>
 </div>
+<!-- <p class="text-visible">HELLO WORLD</p> -->
 
 <style scoped>
   .modal-bg {
