wording tweaks and remove modals until fixed

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <div class="description">
     <p class="fs-1 text-center">Abraham Coombs</p>
     <p class="fs-3 text-center">Fullstack Web Developer</p>
-    <p class="fs-5 indent mt-5">I spent several years working as a manual quality assurance tester and lead before I returned to school to finish my B.S. in General Studies.  After finishing my degree, I realized I would rather go back to software development, but instead as a programmer; this prompted me to take an immersive fullstack web developer course through CodeWorks in Boise.  While there I practice a variety of skills, including HTML, CSS, JavaScript, and C#.  I used Vue.js for the frontend and Node.js or .NET for the backend.  The databases used were MongoDB and MySQL.</p>
+    <p class="fs-5 indent mt-5">I spent several years working as a manual quality assurance tester and lead before I returned to school to finish my B.S. in General Studies.  After finishing my degree, I realized I would rather go back to software development, but instead as a programmer; this prompted me to take an immersive fullstack web developer course through CodeWorks in Boise.  While there I practiced a variety of skills, including HTML, CSS, JavaScript, and C#.  I used Vue.js for the frontend and Node.js or .NET for the backend.  I used both a document database (MongoDb) and a relational database (MySQL).</p>
   </div>
 </section>
 
