--- a/carousel.html
+++ b/carousel.html
@@ -15,15 +15,18 @@
           </div>
           <div class="desc">
             <div class="desc-title d-flex justify-content-center">
-              <p class="fs-3"><button class="text-visible" onclick="openModal('digitalDungeonsModal')">Digital Dungeons</button></p>
+              <!-- <p class="fs-3"><button class="text-visible" onclick="openModal('digitalDungeonsModal')">Digital Dungeons</button></p> -->
+              <p class="fs-3">*Digital Dungeons</p>
               <div class="icons d-flex gap-2 ps-3">
-                <a href="https://digital-dungeons.onrender.com/" target="_blank" class="mdi mdi-page fs-4"
-                  title="Digital Dungeons"></a>
+                <a href="https://digital-dungeons.onrender.com/" target="_blank" title="Digital Dungeons"><i
+                    class="mdi mdi-book-open-page-variant-outline fs-4"></i></a>
               </div>
             </div>
             <div class="desc-body p-3">
               <p>Digital Dungeons is a tool for dungeon masters to organize campaigns and encounters. Created using
                 Vue.js for the frontend and Node.js for the backend using MongoDB as a database.</p>
+              <p>* Please note that sites using free hosting with render.io spool down after 15 minutes...so it may take
+                a few for it to load.</p>
             </div>
           </div>
         </label>
@@ -35,10 +38,11 @@
           </div>
           <div class="desc">
             <div class="desc-title d-flex justify-content-center">
-              <p class="fs-3"><button class="text-visible" onclick="openModal('keeprModal')">Keepr</button></p>
-
+              <!-- <p class="fs-3"><button class="text-visible" onclick="openModal('keeprModal')">Keepr</button></p> -->
+              <p class="fs-3">Keepr</p>
               <div class="icons d-flex gap-2 ps-3">
-                <a href="https://github.com/coombsab" target="_blank" class="mdi mdi-page fs-4" title="Keepr"></a>
+                <a href="https://github.com/coombsab/bcwKeeperFinalCheckpoint" target="_blank" title="Keepr"><i
+                    class="mdi mdi-book-open-page-variant-outline fs-4"></i></a>
               </div>
             </div>
             <div class="desc-body p-3">
@@ -55,15 +59,19 @@
           </div>
           <div class="desc">
             <div class="desc-title d-flex justify-content-center">
-              <p class="fs-3"><button class="text-visible" onclick="openModal('groceriesModal')">Groceries</button></p>
+              <!-- <p class="fs-3"><button class="text-visible" onclick="openModal('groceriesModal')">Groceries</button></p> -->
+              <p class="fs-3">*Groceries</p>
               <div class="icons d-flex gap-2 ps-3">
-                <a href="https://groceries.onrender.com/" target="_blank" class="mdi mdi-page fs-4"
-                  title="Groceries"></a>
+                <a href="https://groceries.onrender.com/" target="_blank" title="Groceries"><i
+                    class="mdi mdi-book-open-page-variant-outline fs-4"></i>*</a>
               </div>
             </div>
             <div class="desc-body p-3">
               <p>I found myself using an old project as a digital grocery list, so I created an application specifically
-                for that! This also uses Vue.js for the frontend, Node.js for the backend and MongoDB as a database.</p>
+                for that! I only designed the app for phones so it could be used while shopping. This also uses Vue.js
+                for the frontend, Node.js for the backend and MongoDB as a database.</p>
+              <p>* Please note that sites using free hosting with render.io spool down after 15 minutes...so it may take
+                a few for it to load.</p>
             </div>
           </div>
         </label>
