--- a/carousel.html
+++ b/carousel.html
@@ -63,7 +63,7 @@
               <p class="fs-3">*Groceries</p>
               <div class="icons d-flex gap-2 ps-3">
                 <a href="https://groceries.onrender.com/" target="_blank" title="Groceries"><i
-                    class="mdi mdi-book-open-page-variant-outline fs-4"></i>*</a>
+                    class="mdi mdi-book-open-page-variant-outline fs-4"></i></a>
               </div>
             </div>
             <div class="desc-body p-3">
