Changed the carousel and about elements to also have display none when not visible

--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,7 @@
 <nav>
   <ul class="d-flex gap-3 align-items-center justify-content-center">
-    <li><button id="buttonAbout" class="text-visible" onclick="goAbout()" disabled>About Me</button></li>
-    <li><button id="buttonApplications" class="text-visible" onclick="goApplications()">Applications</button></li>
+    <li><button id="buttonAbout" class="text-visible fade-transition" onclick="goAbout()" disabled>About Me</button></li>
+    <li><button id="buttonApplications" class="text-visible fade-transition" onclick="goApplications()">Applications</button></li>
   </ul>
 </nav>
 
