Fixed some possible styling issues with height for nav and main, as well as image size

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   }
 
   .about-section>img {
-    width: 90vw;
+    width: 80vw;
     border-radius: 10px;
   }
 
@@ -29,8 +29,8 @@
 
   @media (min-width: 768px) {
     .about-section>img {
-      width: 50%;
-      height: 50%;
+      width: 50vw;
+      height: 50vh;
     }
     .about-section {
       flex-wrap: nowrap;
@@ -44,8 +44,8 @@
 
   
     .about-section>img {
-      width: 75%;
-      height: 75%;
+      width: 75vw;
+      height: 75vh;
     }
   }
 </style>
